tests/ui/parser/expected_while_multiline.stderr
error: expected `while`, found `;`
  --> ROOT/tests/ui/parser/expected_while_multiline.sol:LL:CC
   |
LL |     do {}
   |          - expected `while`
LL |     ;
   |     ^ unexpected token

error: aborting due to 1 previous error

